Update with pg13 support
Also updates the makefile to auto-detect the postgres version.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ lto = true
 [features]
 default = ["parse_headers"]
 parse_headers = ["timescale-extension-utils/parse_headers"]
+pg12 = ["timescale-extension-utils/pg12"]
+pg13 = ["timescale-extension-utils/pg13"]
