--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ pg13 = ["pgx/pg13", "pgx-tests/pg13"]
 [dependencies]
 bincode = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
-pgx = {git="https://github.com/JLockerman/pgx.git", branch="timescale"}
-pgx-macros = {git="https://github.com/JLockerman/pgx.git", branch="timescale"}
+pgx = {git="https://github.com/JLockerman/pgx.git", branch="guardless"}
+pgx-macros = {git="https://github.com/JLockerman/pgx.git", branch="guardless"}
 
 [dev-dependencies]
-pgx-tests = {git="https://github.com/JLockerman/pgx.git", branch="timescale"}
+pgx-tests = {git="https://github.com/JLockerman/pgx.git", branch="guardless"}
