--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lto = true
 default = []
 pg12 = ["pgx/pg12", "pgx-tests/pg12"]
 pg13 = ["pgx/pg13", "pgx-tests/pg13"]
+pg14 = ["pgx/pg14", "pgx-tests/pg14"]
 
 [dependencies]
 bincode = "1.3.1"
