--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,13 @@ lto = true
 default = []
 pg12 = ["pgx/pg12", "pgx-tests/pg12"]
 pg13 = ["pgx/pg13", "pgx-tests/pg13"]
+pg14 = ["pgx/pg14", "pgx-tests/pg14"]
 
 [dependencies]
 bincode = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
-pgx = {git="https://github.com/JLockerman/pgx.git", branch="guardless"}
-pgx-macros = {git="https://github.com/JLockerman/pgx.git", branch="guardless"}
+pgx = "0.2.0"
+pgx-macros = "0.2.0"
 
 [dev-dependencies]
-pgx-tests = {git="https://github.com/JLockerman/pgx.git", branch="guardless"}
+pgx-tests = "0.2.0"
