--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,23 @@
 [package]
-name = "promscale_rs"
-version = "0.3.0"
+name = "promscale"
+version = "0.4.0"
 edition = "2018"
 
 [lib]
-crate-type = ["staticlib"]
+crate-type = ["cdylib", "rlib"]
 
 [profile.release]
 lto = true
+
+[profile.dev]
+lto = "thin"
 
 [features]
 default = []
 pg12 = ["pgx/pg12", "pgx-tests/pg12"]
 pg13 = ["pgx/pg13", "pgx-tests/pg13"]
 pg14 = ["pgx/pg14", "pgx-tests/pg14"]
+pg_test = []
 
 [dependencies]
 bincode = "1.3.1"
