--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,14 @@ default = []
 pg12 = ["pgx/pg12", "pgx-tests/pg12"]
 pg13 = ["pgx/pg13", "pgx-tests/pg13"]
 pg14 = ["pgx/pg14", "pgx-tests/pg14"]
-pg_test = []
+pg_test = ["serde_json"]
 
 [dependencies]
 bincode = "1.3.1"
-serde = { version = "1.0", features = ["derive"] }
 pgx = "0.2.1"
 pgx-macros = "0.2.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0.70", optional = true }
 
 [dev-dependencies]
 pgx-tests = "0.2.1"
