--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,35 @@
 [package]
-name = "promscale_rs"
-version = "0.3.0"
+name = "promscale"
+version = "0.3.1"
 edition = "2018"
 
 [lib]
-crate-type = ["staticlib"]
+crate-type = ["cdylib", "rlib"]
 
 [profile.release]
-lto = true
+panic = "unwind" # Ensures that we don't abort a Postgres process
+opt-level = 3
+lto = "fat"
+debug = true
+codegen-units = 1
+
+[profile.dev]
+panic = "unwind"
+lto = "thin"
 
 [features]
 default = []
 pg12 = ["pgx/pg12", "pgx-tests/pg12"]
 pg13 = ["pgx/pg13", "pgx-tests/pg13"]
 pg14 = ["pgx/pg14", "pgx-tests/pg14"]
+pg_test = ["serde_json"]
 
 [dependencies]
 bincode = "1.3.1"
+pgx = "0.2.1"
+pgx-macros = "0.2.1"
 serde = { version = "1.0", features = ["derive"] }
-pgx = "0.2.0"
-pgx-macros = "0.2.0"
+serde_json = { version = "1.0.70", optional = true }
 
 [dev-dependencies]
-pgx-tests = "0.2.0"
+pgx-tests = "0.2.1"
