--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ pg_test = ["serde_json"]
 bincode = "1.3.1"
 pgx = "0.2.5"
 pgx-macros = "0.2.5"
+num_cpus = "1.13.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.70", optional = true }
 
