ci: skip ci/docker/lint workflows when changes are not relevant

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,13 @@
 name: ci
 on:
   pull_request:
+    paths-ignore:
+    - '.github/workflows/docker.yaml'
+    - '.github/workflows/lint.yaml'
+    - '.github/workflows/release.yaml'
+    - '*.md'
+    - 'dist/*'
+    - 'tools/package'
 
 jobs:
   test:
