Ensure that pgx generates schema on Alpine Linux
The missing *-unknown-linux-musl targets meant that pgx's magic linker
script was not used, breaking schema gen on Alpine

The switch to our own pgx fork will be temporary: we will be upstreaming any
changes in our fork as quickly as possible.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: cargo-pgx
+          args: cargo-pgx --git https://github.com/timescale/pgx --branch promscale-staging
 
       - name: Initialize pgx
         uses: actions-rs/cargo@v1
