--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: cargo-pgx
+          args: cargo-pgx --git https://github.com/timescale/pgx --branch promscale-staging
 
       - name: Cache pgx
         id: cache-pgx
