Wrap migration SQL in migration do-block, emit with pgx
This change introduces a build script which wraps the contents of each
SQL file in the `migrations` directory in a DO block which conditionally
applies the migration if it has not yet been applied to the database.

The build script outputs its contents to `migration.sql`, which in turn
is included in the generated SQL which pgx outputs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ num_cpus = "1.13.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.70", optional = true }
 
+[build-dependencies]
+askama = "0.11.0"
+
 [dev-dependencies]
 pgx-tests = "0.2.5"
 
