--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,1 @@
-* @bitwalker @JamesGuthrie @jgpruitt @cevian
-/src/ @bitwalker
-Cargo.toml @bitwalker
+* @JamesGuthrie @jgpruitt @cevian @sumerman @pgnickb
