--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,17 +13,33 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        docker:
-        - docker-image-14
-        - docker-image-13
-        - docker-image-12
+        pgversion:
+          - 12
+          - 13
+          - 14
+        tsversion:
+          - 2.6.0
     steps:
       - uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: build docker image
-        run: make ${{ matrix.docker }}
-        env:
-          DOCKER_BUILDKIT: 1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          build-args: |
+            PG_VER=pg${{ matrix.pgversion }}
+            TIMESCALEDB_VER=${{ matrix.tsversion }}
+          context: .
+          push: true
+          tags: ghcr.io/timescale/dev_promscale_extension:pg${{matrix.pgversion}}-latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
