--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ bincode = "1.3.1"
 pgx = "0.3.1"
 pgx-macros = "0.3.1"
 num_cpus = "1.13.1"
+sha2 = "0.10.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.70", optional = true }
 
