Fix docker image build
The environment variables used to control which version of postgres to
build for were not aligned between the alpine and ha images, and not
aligned with the docker workflow. This meant that all images were built
against pg14, but tagged with different PG versions.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -53,8 +53,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           build-args: |
-            PG_VER=pg${{ matrix.pgversion }}
-            TIMESCALEDB_VER=${{ matrix.tsversion }}
+            PG_VERSION=${{ matrix.pgversion }}
+            TIMESCALEDB_VERSION=${{ steps.metadata.outputs.tsmajor }}
           context: .
           file: ${{matrix.base}}.Dockerfile
           push: true
