--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -20,12 +20,18 @@ jobs:
         pgversion:
         - 14
         - 13
-        - 12
         tsversion:
         - 2.6.0
         base:
         - ha
         - alpine
+        include:
+        - pgversion: 12
+          tsversion: 2.5.0
+          base: ha
+        - pgversion: 12
+          tsversion: 2.5.0
+          base: alpine
     steps:
       - uses: actions/checkout@v2
 
@@ -42,10 +48,12 @@ jobs:
       - name: Gather metadata
         id: metadata
         run: |
-          tsmajor=$(echo ${{matrix.tsversion}} | cut -d. -f1)
+          tsmajor=$(echo ${{ matrix.tsversion }} | cut -d. -f1)
+          tsmajmin=$(echo ${{ matrix.tsversion }} | cut -d. -f1,2)
           branch_name=$(echo ${{github.head_ref || github.ref_name}} | sed 's#/#-#')
           build_type_suffix=$(echo "-${{matrix.base}}" | sed 's/-ha//')
           echo "::set-output name=tsmajor::${tsmajor}"
+          echo "::set-output name=tsmajmin::${tsmajmin}"
           echo "::set-output name=branch_name::${branch_name}"
           echo "::set-output name=build_type_suffix::${build_type_suffix}"
 
@@ -54,14 +62,19 @@ jobs:
         with:
           build-args: |
             PG_VERSION=${{ matrix.pgversion }}
-            TIMESCALEDB_VERSION=${{ steps.metadata.outputs.tsmajor }}
+            TIMESCALEDB_VERSION_FULL=${{ matrix.tsversion }}
+            TIMESCALEDB_VERSION_MAJOR=${{ steps.metadata.outputs.tsmajor }}
+            TIMESCALEDB_VERSION_MAJMIN=${{ steps.metadata.outputs.tsmajmin }}
           context: .
           file: ${{matrix.base}}.Dockerfile
           push: true
-          tags: ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.branch_name}}-ts${{steps.metadata.outputs.tsmajor}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
+          tags: |
+            ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.branch_name}}-ts${{matrix.tsversion}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
+            ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.branch_name}}-ts${{steps.metadata.outputs.tsmajor}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
+            ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.branch_name}}-ts${{steps.metadata.outputs.tsmajmin}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
           # Note: it's necessary to use a different cache scope to achieve caching for both Ubuntu and Alpine images
-          cache-from: type=gha,scope=${{matrix.base}}
-          cache-to: type=gha,mode=max,scope=${{matrix.base}}
+          cache-from: type=gha,scope=${{matrix.base}}-${{matrix.pgversion}}-${{matrix.tsversion}}
+          cache-to: type=gha,mode=max,scope=${{matrix.base}}-${{matrix.pgversion}}-${{matrix.tsversion}}
 
   # This allows us to set a single job which must pass in GitHub's branch protection rules,
   # otherwise we have to keep updating them as we add or remove postgres versions etc.
