Make trusted extension optional for PG12.
- promscale.control is generated via build.rs based on pg version
- CI tests and image builds are re-enabled on pg12
- Migrations, involving @extowner@, had to be altered to be compatible
  with pg12.
- Some tests had to be generalized to pass on both pg14 and pg12

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,8 @@ jobs:
       matrix:
         postgres:
         - version: "14"
+        - version: "13"
+        - version: "12"
     steps:
       - uses: actions/checkout@v2
       - name: Install latest nightly
@@ -37,7 +39,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.pgx
-          key: dot-pgx
+          key: dot-pgx-${{ matrix.postgres.version }}-cargo-${{ hashFiles('**/Cargo.*') }}
 
       - name: Initialize pgx
         if: ${{ steps.cache-pgx.outputs.cache-hit != 'true' }}
