Added a test to ensure that the dump/restore process works.
The rough outline of the test:

1. create a Postgres docker container with timescaledb
2. create the promscale extension
3. add metrics, exemplars, and traces to the database
4. snapshot the database
5. use pg_dump to create a logical SQL dump
6. destroy the docker container and create a new one
7. restore into the new database
8. snapshot the database
9. create more data to make sure things are still wired up correctly
10. compare the two snapshots. they should be equal

This uncovered several issues that were addressed:

The _ps_catalog.migration and _ps_catalog.promscale_instance_information tables should not be extension config tables. This means the structure of the tables will be dumped by pg_dump, but the data in them will not. The extension code will populate these tables appropriately. Because we are handling the _ps_catalog.migration table this way, you must use the same version of the extension on the restore side that was present on the dump side.

The extension inserts an initial row into the _prom_catalog.ids_epoch table on installation. We need to skip this if a restore is in progress so that the dumped value is what is inserted.

The public.prom_installation_info table was unused and caused problems for restores, so it was removed.

Both the _prom_catalog.remote_commands and _ps_trace.tag_key tables have rows managed by the extension and potentially user-supplied rows. For these tables, we manipulate the sequence such that ids < 1000 are managed by the extension and NOT dumped by pg_dump. ids >= 1000 are dumped and restored.

The _prom_catalog.default table contains default configuration values. End-users can update these values. The extension inserts the initial defaults during create extension and subsequent migrations. We want pg_dump to dump any user-modified values so that they are preserved when restored. We introduced a new view to provide the initial values, and the table's semantics

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ dist/*.rpm
 dist/*.deb
 dist/*.tar
 target
-hand-written-migration.sql
-bootstrap.sql
+/hand-written-migration.sql
 /promscale.control
+/bootstrap.sql
