--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -9,6 +9,7 @@ postgres = "0.19.2"
 pretty_env_logger = "0.4"
 testcontainers = "0.12.0"
 test-generator = "0.3.0"
+similar = "2.1.0"
 
 [build-dependencies]
 build-deps = "^0.1"
