--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -10,6 +10,7 @@ pretty_env_logger = "0.4"
 testcontainers = "0.12.0"
 test-generator = "0.3.0"
 similar = "2.1.0"
+regex = "1.5.5"
 
 [build-dependencies]
 build-deps = "^0.1"
