--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
-            toolchain: stable
+            toolchain: 1.58.0
             override: true
             components: rustfmt, clippy
 
@@ -27,7 +27,7 @@ jobs:
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
-            toolchain: stable
+            toolchain: 1.58.0
             override: true
             components: rustfmt, clippy
 
