--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,6 +27,11 @@ jobs:
 
   clippy:
     runs-on: ubuntu-latest
+    env:
+      RUSTC_WRAPPER: sccache
+      SCCACHE_BUCKET: promscale-extension-sccache
+      AWS_ACCESS_KEY_ID: ${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_SECRET_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v2
       - name: Install latest nightly
@@ -35,6 +40,13 @@ jobs:
             toolchain: stable
             override: true
             components: rustfmt, clippy
+
+      - name: Setup sccache
+        run: |
+          curl -L "https://github.com/mozilla/sccache/releases/download/v0.2.15/sccache-v0.2.15-x86_64-unknown-linux-musl.tar.gz" | tar zxf -
+          chmod +x sccache-*/sccache
+          sudo mv sccache-*/sccache /usr/local/bin/sccache
+          sccache --show-stats
 
       - uses: Swatinem/rust-cache@v1
 
@@ -58,6 +70,11 @@ jobs:
 
   pgspot:
     runs-on: ubuntu-latest
+    env:
+      RUSTC_WRAPPER: sccache
+      SCCACHE_BUCKET: promscale-extension-sccache
+      AWS_ACCESS_KEY_ID: ${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout extension code
         uses: actions/checkout@v2
@@ -76,6 +93,13 @@ jobs:
 
       - name: Install pgspot dependencies
         run: python -m pip install -r pgspot/requirements.txt
+
+      - name: Setup sccache
+        run: |
+          curl -L "https://github.com/mozilla/sccache/releases/download/v0.2.15/sccache-v0.2.15-x86_64-unknown-linux-musl.tar.gz" | tar zxf -
+          chmod +x sccache-*/sccache
+          sudo mv sccache-*/sccache /usr/local/bin/sccache
+          sccache --show-stats
 
       - uses: Swatinem/rust-cache@v1
 
