--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,11 @@ jobs:
         - version: "14"
         - version: "13"
         - version: "12"
+    env:
+      RUSTC_WRAPPER: sccache
+      SCCACHE_BUCKET: promscale-extension-sccache
+      AWS_ACCESS_KEY_ID: ${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_SECRET_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v2
       - name: Install latest nightly
@@ -23,6 +28,13 @@ jobs:
         with:
             toolchain: stable
             override: true
+
+      - name: Setup sccache
+        run: |
+          curl -L "https://github.com/mozilla/sccache/releases/download/v0.2.15/sccache-v0.2.15-x86_64-unknown-linux-musl.tar.gz" | tar zxf -
+          chmod +x sccache-*/sccache
+          sudo mv sccache-*/sccache /usr/local/bin/sccache
+          sccache --show-stats
 
       - uses: Swatinem/rust-cache@v1
 
@@ -51,4 +63,7 @@ jobs:
         with:
           command: pgx
           args: test pg${{ matrix.postgres.version }}
+
+      - name: Show sccache stats
+        run: sccache --show-stats
 
