--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: cargo-pgx --git https://github.com/timescale/pgx --branch promscale-staging
+          args: cargo-pgx --version 0.4.4
 
       - name: Cache pgx
         id: cache-pgx
