--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -54,7 +54,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: cargo-pgx --git https://github.com/timescale/pgx --branch promscale-staging
+          args: cargo-pgx --version 0.4.4
 
       - name: Initialize pgx
         uses: actions-rs/cargo@v1
@@ -107,7 +107,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: cargo-pgx --git https://github.com/timescale/pgx --branch promscale-staging
+          args: cargo-pgx --version 0.4.4
 
       - name: Initialize pgx
         uses: actions-rs/cargo@v1
