--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.5.0"
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [profile.release]
 panic = "unwind" # Ensures that we don't abort a Postgres process
@@ -29,8 +29,8 @@ pg_test = ["serde_json", "proptest"]
 
 [dependencies]
 bincode = "1.3.1"
-pgx = "0.3.1"
-pgx-macros = "0.3.1"
+pgx = "0.4.4"
+pgx-macros = "0.4.4"
 num_cpus = "1.13.1"
 sha2 = "0.10.2"
 serde = { version = "1.0", features = ["derive"] }
@@ -41,12 +41,7 @@ proptest  = { version = "1.0.0", optional = true }
 askama = "0.11.0"
 
 [dev-dependencies]
-pgx-tests = "0.3.1"
-
-[patch.crates-io]
-pgx = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
-pgx-macros = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
-pgx-tests = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
+pgx-tests = "0.4.4"
 
 # from e2e workspace
 test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
