Fix insecure search_path in migration scripts
When `pg_temp` is not specified explicitly in the `search_path`, it is
_prepended_ to the existing `search_path`. This allows for an attacker
to shadow tables in the `pg_catalog` schema, allowing them to trick
scripts which rely on the contents of certain system tables (e.g.
`pg_catalog.pg_user`).

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -71,7 +71,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'timescale/pgspot'
-          ref: '0.1.0'
+          ref: '0.2.0'
           path: 'pgspot'
 
       - name: Install pgspot dependencies
@@ -101,4 +101,4 @@ jobs:
           args: schema pg14 --out /tmp/schema.sql
 
       - name: Run pgspot
-        run: ./pgspot/pgspot --sql-accepting=execute_everywhere --sql-accepting=distributed_exec --ignore PS005 /tmp/schema.sql
+        run: ./pgspot/pgspot --sql-accepting=execute_everywhere --sql-accepting=distributed_exec --ignore PS005 /tmp/schema.sql ./sql/promscale--0.0.0.sql
