--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ exclude = ["tools/post-install"]
 
 [package]
 name = "promscale"
-version = "0.5.0"
+version = "0.5.0-alpha"
 edition = "2018"
 
 [lib]
