--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,7 +53,7 @@ jobs:
           version="$(echo "${GITHUB_REF}" | sed -e 's|refs/tags/||')"; \
           tag="${version}"; \
         else \
-          tag="$(cargo metadata --format-version 1 --no-deps | jq -r '.packages[0].version')"; \
+          tag="$(cargo metadata --format-version 1 --no-deps | jq -r '.packages[] | select(.name == "promscale") | .version')"; \
           version="${tag}-snapshot"; \
         fi;
         # a dash indicates a pre-release version in semver
