--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,34 +22,30 @@ jobs:
         arch:
         - cpu: x86_64
           platform: amd64
-        - cpu: aarch64
-          platform: arm64
         os:
         - name: linux
           distro: debian
           version: 11
-          pkg_cloud_tag: debian/bullseye
+          pkg_cloud_tags:
+            - debian/stretch
+            - debian/buster
+            - debian/bullseye
+            - ubuntu/bionic
+            - ubuntu/focal
+            - ubuntu/hirsute
+            - ubuntu/jammy
+            - ubuntu/impish
           pkg_type: deb
         - name: linux
           distro: centos
           version: 7
-          pkg_cloud_tag: el/7
+          pkg_cloud_tags:
+            - el/7
           pkg_type: rpm
         postgres:
         - version: "12"
         - version: "13"
         - version: "14"
-        exclude:
-          # centos 7 doesn't support arm64
-          - os:
-              name: linux
-              distro: centos
-              version: 7
-              pkg_cloud_tag: el/7
-              pkg_type: rpm
-            arch:
-              cpu: aarch64
-              platform: arm64
 
     steps:
     - name: Install PackageCloud
@@ -120,30 +116,29 @@ jobs:
         docker rm -f "${container}"
         ls -la artifacts/*
 
-    - name: Build Package Tester
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        load: true
-        platforms: ${{ matrix.os.name }}/${{ matrix.arch.platform }}
-        file: dist/${{ matrix.os.pkg_type }}.dockerfile
-        target: tester
-        build-args: |
-          OS_NAME=${{ matrix.os.distro }}
-          OS_VERSION=${{ matrix.os.version }}
-          PG_VERSION=${{ matrix.postgres.version }}
-          RUST_VERSION=${{ env.RUST_VERSION }}
-          RELEASE_FILE_NAME=${{ steps.metadata.outputs.filename }}
-        secrets: |
-          "AWS_ACCESS_KEY_ID=${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_ACCESS_KEY_ID }}"
-          "AWS_SECRET_ACCESS_KEY=${{ secrets.PROMSCALE_EXTENSION_SCCACHE_AWS_SECRET_ACCESS_KEY }}"
-        tags: ${{ steps.metadata.outputs.image }}-test
-
-    - name: Test Package
+    - name: Test package against all variants
       env:
-        EXTENSION_DOCKER_IMAGE: ${{ steps.metadata.outputs.image }}-test
+        PG_VERSION: ${{ matrix.postgres.version }}
+        DOCKER_PLATFORM: ${{ matrix.os.name }}/${{ matrix.arch.platform }}
+        PACKAGE_TO_TEST: artifacts/${{ steps.metadata.outputs.outfile }}
+        IMAGE_BASE: ${{ steps.metadata.outputs.image }}-test
+        DOCKER_FILE: dist/${{ matrix.os.pkg_type }}.test.dockerfile
         CONNECTOR_DOCKER_IMAGE: "timescale/promscale:0.11.0-alpha"
-      run: ./tools/smoke-test "${EXTENSION_DOCKER_IMAGE}" "${CONNECTOR_DOCKER_IMAGE}" "${DOCKER_PLATFORM}"
+      run: |
+        for pkg_cloud_tag in ${{ join(matrix.os.pkg_cloud_tags, ' ') }}; do \
+          DISTRO=$(echo ${pkg_cloud_tag} | cut -d'/' -f 1 | sed 's/el/centos/'); \
+          DISTRO_VERSION=$(echo ${pkg_cloud_tag} | cut -d'/' -f 2); \
+          EXTENSION_DOCKER_IMAGE="${IMAGE_BASE}-${DISTRO}-${DISTRO_VERSION}"; \
+          docker buildx build --load --platform=${DOCKER_PLATFORM} \
+            --build-arg=DISTRO=${DISTRO} \
+            --build-arg=DISTRO_VERSION=${DISTRO_VERSION} \
+            --build-arg=PG_VERSION=${PG_VERSION} \
+            --build-arg=RELEASE_FILE_NAME=${PACKAGE_TO_TEST} \
+            -t ${EXTENSION_DOCKER_IMAGE} \
+            -f ${DOCKER_FILE} \
+            . ; \
+          ./tools/smoke-test "${EXTENSION_DOCKER_IMAGE}" "${CONNECTOR_DOCKER_IMAGE}" "${DOCKER_PLATFORM}"; \
+        done
 
     - name: Upload Artifact for Job
       uses: actions/upload-artifact@v2
@@ -152,12 +147,14 @@ jobs:
         path: artifacts/${{ steps.metadata.outputs.outfile }}
         retention-days: 1
 
-    - name: Upload Artifact to PackageCloud
+    - name: Upload Artifacts to PackageCloud
       if: ${{ startsWith(github.ref, 'refs/tags') }}
       env:
         PACKAGECLOUD_TOKEN: ${{ secrets.IO_PACKAGECLOUD_TOKEN }}
       run: |
-        package_cloud push ${{ steps.metadata.outputs.repo }}/${{ matrix.os.pkg_cloud_tag }} artifacts/${{ steps.metadata.outputs.outfile }}
+        for pkg_cloud_tag in ${{ join(matrix.os.pkg_cloud_tags, ' ') }}; do \
+          package_cloud push ${{ steps.metadata.outputs.repo }}/${pkg_cloud_tag} artifacts/${{ steps.metadata.outputs.outfile }}; \
+        done
 
     outputs:
       tag: ${{ steps.metadata.outputs.tag }}
