Create packages as `promscale-extension`
Debian/Ubuntu has the convention that package names do not contain
underscores [1]. While Fedora allows underscores, it states that dashes
should be used in preference of underscores [2].

[1]: https://www.debian.org/doc/debian-policy/ch-controlfields.html#source
[2]: https://fedoraproject.org/wiki/Packaging:Naming?rd=Packaging:NamingGuidelines#General_Naming

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,11 +75,11 @@ jobs:
         fi;
         echo "::set-output name=version::${version}"
         echo "::set-output name=tag::${tag}"
-        echo "::set-output name=filename::promscale_extension-${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}"
-        echo "::set-output name=outfile::promscale_extension-${version}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}"
+        echo "::set-output name=filename::promscale-extension-${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}"
+        echo "::set-output name=outfile::promscale-extension-${version}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}"
         echo "::set-output name=repo::${repo}"
         echo "::set-output name=ghopts::${ghopts}"
-        echo "::set-output name=image::promscale_extension:${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}"
+        echo "::set-output name=image::promscale-extension:${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}"
 
     - name: Setup QEMU
       uses: docker/setup-qemu-action@v1
