--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -77,7 +77,8 @@ jobs:
           cache-to: type=gha,mode=max,scope=${{matrix.base}}-${{matrix.pgversion}}-${{matrix.tsversion}}
 
       - name: Docker images
-        run: docker images
+        run: |
+          docker images
         
       - name: Run end-to-end tests
         uses: actions-rs/cargo@v1
