Extracting golden-tests aka SQL tests into their own workspace.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -87,6 +87,14 @@ jobs:
         env:
           TS_DOCKER_IMAGE: ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.image_branch_name}}-ts${{matrix.tsversion}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
 
+      - name: Run SQL tests
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: -p sql-tests
+        env:
+          TS_DOCKER_IMAGE: ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.image_branch_name}}-ts${{matrix.tsversion}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
+
       - name: Check SQL Documentation
         if: ${{ matrix.pgversion == 14 && matrix.base == 'ha' }}
         env:
