--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["test-common", "e2e", "gendoc"]
+members = ["test-common", "e2e", "sql-tests", "gendoc"]
 
 [package]
 name = "promscale"
