Implement upgrade tests
Test a "fresh" install against an install upgraded from prior versions.

--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -10,6 +10,8 @@ regex = "1.5.5"
 md-5 = "0.10.1"
 hex = "0.4.3"
 test-common = "0.1.0"
+semver = "1.0.12"
+postgres = "0.19.2"
 
 [build-dependencies]
 build-deps = "^0.1"
