Implement upgrade tests
Test a "fresh" install against an install upgraded from prior versions.

--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -11,6 +11,8 @@ regex = "1.5.5"
 similar = "2.1.0"
 log = "0.4.17"
 test-common = "0.1.0"
+semver = "1.0.12"
+postgres = "0.19.2"
 
 [build-dependencies]
 build-deps = "^0.1"
