Enhance per-version upgrade test to traverse all versions
As we recently discovered, a simple "smoke" upgrade test which validates
that it is possible to upgrade through all extension versions would be
very helpful.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -90,6 +90,7 @@ jobs:
           args: -p e2e
         env:
           TS_DOCKER_IMAGE: ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.image_branch_name}}-ts${{matrix.tsversion}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
+          RUST_LOG: info
 
       - name: Run SQL tests
         uses: actions-rs/cargo@v1
