--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dev-dependencies]
-pretty_env_logger = "0.4"
-similar = "2.1.0"
-regex = "1.5.5"
-md-5 = "0.10.1"
 hex = "0.4.3"
+md-5 = "0.10.1"
+pretty_env_logger = "0.4"
+regex = "1.5.5"
+similar = "2.1.0"
+log = "0.4.17"
 test-common = "0.1.0"
 
 [build-dependencies]
