--- a/test-common/Cargo.toml
+++ b/test-common/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 postgres = "0.19.2"
 pretty_env_logger = "0.4"
-testcontainers = "0.12.0"
+testcontainers = "0.14.0"
+rand = "0.8.5"
